add locateus.html & culture.html files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <ul class="nav navbar-nav navbar-center">
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="menu.html"><span class="fab fa-elementor"></span>  Menu</a></li>
-                        <li><a href="#">Our Culture</a></li>
+                        <li><a href="culture.html">Our Culture</a></li>
                         <li><a href="locateus.html">Find your Fresh-oh!</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
