--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
                     <ul class="nav navbar-nav navbar-center">
                         <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="menu.html"><span class="fab fa-elementor"></span>  Menu</a></li>
-                        <li><a href="#">Our Culture</a></li>
+                        <li><a href="culture.html">Our Culture</a></li>
                         <li><a href="locateus.html">Find your Fresh-oh!</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
@@ -47,13 +47,13 @@
                             <h2>Drinks</h2> 
                         </div>
                     <div class="list-group-horizontal">
-                        <a href="#" class="list-group-item">
+                        <a href="#" class="list-group-item list-group-item-success">
                             <i class="fa fa-carrot fa-lg"></i>
-                        Fresh Juice
+                            <h3>Fresh Juice</h3>
                         </a>
                         <a href="#" class="list-group-item">
                             <i class="fa fa-mug-hot fa-lg"></i>
-                        Coffee & Tea
+                        <h3>Coffee & Tea</h3>
                         </a>
                     </div>
                     
@@ -62,16 +62,17 @@
                         <h2>Eat</h2> 
                     </div>
                     <div class="list-group-horizontal">
-                        <a href="#" class="list-group-item">
-                        Breakfast <span class="badge badge-pill badge-danger">NEW!</span>
+                        <a href="#" class="list-group-item list-group-item-danger">
+                            <span class="badge badge-pill badge-danger">NEW!</span>
+                            <h3>Breakfast</h3>
                         </a>
-                        <a href="#" class="list-group-item">
+                        <a href="#" class="list-group-item ">
                             <i class="fa fa-bread-slice fa-lg"></i>
-                        Sandwiches
+                            <h3>Sandwiches</h3>
                         </a>
-                        <a href="#" class="list-group-item">
+                        <a href="#" class="list-group-item list-group-item-success">
                             <i class="fa fa-utensils fa-lg"></i>
-                        Salad
+                            <h3>Salads</h3>
                         </a>
                     </div>
                     </div>
@@ -83,11 +84,11 @@
                     <div class="list-group-horizontal">
                         <a href="#" class="list-group-item">
                             <i class="fa fa-cookie-bite fa-lg"></i>
-                        Cookies
+                        <h3>Cookies</h3> 
                         </a>
                         <a href="#" class="list-group-item">
                             <i class="fa fa-cheese fa-lg"></i>
-                        Cakes
+                        <h3>Cakes</h3>
                         </a>
                     </div>
                 </div>
