--- a/contact.html
+++ b/contact.html
@@ -53,17 +53,17 @@
                         <h1 class="h1-responsive">Contact us</h1>
                         <!--Section description-->
     
-                        <p class="text-left w-responsive mx-2 mb-5">Do you have any questions?
+                        <p class="text-left w-responsive">Do you have any questions?
                             <br> Please do not hesitate to contact us directly. Our team will come back to you within
                             a matter of hours to help you.</p>
 
                         <!--Grid column-->
-                        <div class="col-xs-9 mb-md-0 mb-5">
+                        <div class="col-xs-9">
                             <form id="contact-form" name="contact-form" action="mail.php" method="POST">
                                 <!--Grid row-->
                                 <div class="row">
                                     <!--Grid column-->
-                                    <div class="col-xs-12">
+                                    <div class="col-sm-12">
                                         <div class="form-group">
                                             <input type="text" id="name" name="name" class="form-control form-control-sm">
                                             <label for="name" class="label">Your name</label>
